--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
-    "prestart": "next build",
     "build": "next build",
-    "start": "next start -p %PORT%",
+    "postinstall": "npm run build",
+    "start": "NODE_ENV=production node server.js",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
