--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "node server.js",
     "build": "next build",
     "postinstall": "npm run build",
-    "start": "NODE_ENV=production node server.js",
-    "heroku-postbuild": "npm run build"
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
